[gd_scene load_steps=75 format=3 uid="uid://cpddocbpnsdlg"]

[ext_resource type="Script" path="res://scripts/inhabitant.gd" id="1_kvbvv"]
[ext_resource type="Texture2D" uid="uid://dxuqjdx4kknaj" path="res://art/characters/rock/reginald_b.png" id="1_nieb6"]
[ext_resource type="Texture2D" uid="uid://b7k7it5usuory" path="res://art/characters/rock/reginald_a.png" id="2_bxb61"]
[ext_resource type="AudioStream" uid="uid://c8ni7igirn11j" path="res://audio/rock/rock_idle.ogg" id="4_0almh"]
[ext_resource type="AudioStream" uid="uid://be0yejdc2fw1w" path="res://audio/rock/rock_idle2.ogg" id="5_gjlwt"]
[ext_resource type="AudioStream" uid="uid://b74g0a7ik3ahp" path="res://audio/rock/rock_idle3.ogg" id="6_ld5md"]
[ext_resource type="AudioStream" uid="uid://cttvw68kpgx6p" path="res://audio/rock/rock_death.ogg" id="7_n4p0j"]
[ext_resource type="PackedScene" uid="uid://bvykw03p33o4p" path="res://scenes/state_machine.tscn" id="8_gkbvo"]
[ext_resource type="Script" path="res://scripts/state_machine/inhabitants/before_state.gd" id="9_hntwq"]
[ext_resource type="Script" path="res://scripts/state_machine/inhabitants/idle_state.gd" id="10_386bm"]
[ext_resource type="Script" path="res://scripts/state_machine/inhabitants/ambient_state.gd" id="11_mmoj1"]
[ext_resource type="Script" path="res://scripts/state_machine/inhabitants/after_state.gd" id="12_ipb3a"]
[ext_resource type="Script" path="res://scripts/state_machine/inhabitants/zap_state.gd" id="13_m4bn5"]
[ext_resource type="Script" path="res://scripts/state_machine/inhabitants/dead_state.gd" id="14_4snjj"]
[ext_resource type="Texture2D" uid="uid://bffadgntttvo3" path="res://art/sparks/sparks_round.png" id="15_rdfwx"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hpm4g"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cbn53"]
atlas = ExtResource("2_bxb61")
region = Rect2(0, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_tjw6h"]
atlas = ExtResource("2_bxb61")
region = Rect2(42, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnhbq"]
atlas = ExtResource("2_bxb61")
region = Rect2(84, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3ghv"]
atlas = ExtResource("2_bxb61")
region = Rect2(126, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_wksen"]
atlas = ExtResource("2_bxb61")
region = Rect2(168, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_03ter"]
atlas = ExtResource("2_bxb61")
region = Rect2(210, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2akf"]
atlas = ExtResource("2_bxb61")
region = Rect2(0, 42, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_q1fie"]
atlas = ExtResource("2_bxb61")
region = Rect2(42, 42, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_2oqiv"]
atlas = ExtResource("1_nieb6")
region = Rect2(0, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_jxw42"]
atlas = ExtResource("1_nieb6")
region = Rect2(42, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_74ggn"]
atlas = ExtResource("1_nieb6")
region = Rect2(84, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_x47ls"]
atlas = ExtResource("1_nieb6")
region = Rect2(126, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_hooh5"]
atlas = ExtResource("1_nieb6")
region = Rect2(168, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_2novw"]
atlas = ExtResource("1_nieb6")
region = Rect2(210, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_bar7g"]
atlas = ExtResource("1_nieb6")
region = Rect2(0, 42, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_siyce"]
atlas = ExtResource("1_nieb6")
region = Rect2(42, 42, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_6dviw"]
atlas = ExtResource("1_nieb6")
region = Rect2(84, 42, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_tr0lp"]
atlas = ExtResource("1_nieb6")
region = Rect2(126, 42, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_qm22b"]
atlas = ExtResource("1_nieb6")
region = Rect2(168, 42, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_kjxmn"]
atlas = ExtResource("1_nieb6")
region = Rect2(210, 42, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7k25"]
atlas = ExtResource("1_nieb6")
region = Rect2(0, 84, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_xhwn6"]
atlas = ExtResource("1_nieb6")
region = Rect2(42, 84, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_cu35a"]
atlas = ExtResource("1_nieb6")
region = Rect2(84, 84, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_x1g0x"]
atlas = ExtResource("1_nieb6")
region = Rect2(126, 84, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_kmh3y"]
atlas = ExtResource("1_nieb6")
region = Rect2(168, 84, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_id2nu"]
atlas = ExtResource("1_nieb6")
region = Rect2(210, 84, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_befv1"]
atlas = ExtResource("1_nieb6")
region = Rect2(0, 126, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_gcqhl"]
atlas = ExtResource("1_nieb6")
region = Rect2(42, 126, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_m2bbh"]
atlas = ExtResource("1_nieb6")
region = Rect2(84, 126, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_k4htt"]
atlas = ExtResource("1_nieb6")
region = Rect2(126, 126, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_fqduo"]
atlas = ExtResource("1_nieb6")
region = Rect2(168, 126, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_3sles"]
atlas = ExtResource("1_nieb6")
region = Rect2(210, 126, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmfh5"]
atlas = ExtResource("1_nieb6")
region = Rect2(0, 168, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_05rjy"]
atlas = ExtResource("1_nieb6")
region = Rect2(42, 168, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xweu"]
atlas = ExtResource("1_nieb6")
region = Rect2(84, 168, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_87fco"]
atlas = ExtResource("1_nieb6")
region = Rect2(126, 168, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_pj1hn"]
atlas = ExtResource("1_nieb6")
region = Rect2(168, 168, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4m23"]
atlas = ExtResource("1_nieb6")
region = Rect2(210, 168, 42, 42)

[sub_resource type="SpriteFrames" id="SpriteFrames_jajcc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cbn53")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjw6h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnhbq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3ghv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wksen")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_03ter")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2akf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q1fie")
}],
"loop": true,
"name": &"rock_a",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2oqiv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jxw42")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_74ggn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x47ls")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hooh5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2novw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bar7g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_siyce")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6dviw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tr0lp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qm22b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kjxmn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7k25")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xhwn6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cu35a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x1g0x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kmh3y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_id2nu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_befv1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gcqhl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m2bbh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k4htt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fqduo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3sles")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmfh5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_05rjy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xweu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_87fco")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pj1hn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4m23")
}],
"loop": true,
"name": &"rock_b",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_ka1dr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle1"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_aj767"]
resource_name = "bump_down"
length = 2.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"rock_b"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.8, 0.9, 1, 1.1, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [23, 24, 25, 26, 27, 28, 27, 28, 27, 29, 7, 7, 7, 8, 7, 8, 7]
}

[sub_resource type="Animation" id="Animation_edfkx"]
resource_name = "bump_left"
length = 2.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"rock_b"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.8, 0.9, 1, 1.1, 1.4, 1.5, 1.8, 1.9, 2, 2.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [9, 10, 11, 12, 13, 14, 13, 14, 13, 15, 7, 8, 7, 8, 7]
}

[sub_resource type="Animation" id="Animation_1wqbj"]
resource_name = "bump_right"
length = 2.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"rock_b"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.8, 0.9, 1, 1.1, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 4, 5, 4, 6, 7, 7, 7, 8, 7, 8, 7]
}

[sub_resource type="Animation" id="Animation_k23tc"]
resource_name = "bump_up"
length = 2.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"rock_b"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.9, 1, 1.1, 1.2, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 20, 21, 20, 22, 7, 7, 7, 8, 7, 8, 7]
}

[sub_resource type="Animation" id="Animation_4l3ec"]
resource_name = "idle1b"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"rock_a"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_123vg"]
resource_name = "idle2"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"rock_a"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 7, 0, 7, 0]
}

[sub_resource type="Animation" id="Animation_fgn7o"]
resource_name = "sleep"
length = 3.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"rock_b"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 18, 19, 20, 21, 22, 23, 24, 23, 22, 21, 22, 23, 24, 23, 22, 21, 22, 23, 24, 23, 22, 21, 22, 23, 24, 23, 22, 21, 20, 19, 18, 0]
}

[sub_resource type="Animation" id="Animation_gihk5"]
resource_name = "talk1"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"rock_a"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 2, 0, 1, 2, 0, 1, 0, 2, 0]
}

[sub_resource type="Animation" id="Animation_47amo"]
resource_name = "talk2"
length = 2.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"rock_a"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 2, 0, 1, 0, 2, 0, 3, 0, 1, 0, 2, 0, 3, 0, 2, 0, 1, 0, 2, 0, 3, 0]
}

[sub_resource type="Animation" id="Animation_bqalg"]
resource_name = "talk3"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"rock_a"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 3, 0, 3, 0, 3, 0, 3, 0, 3]
}

[sub_resource type="Animation" id="Animation_dje3f"]
resource_name = "talk4"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"rock_a"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [2, 3, 2, 3, 2, 3, 2, 3, 2, 3]
}

[sub_resource type="Animation" id="Animation_ph36y"]
resource_name = "zapdeath"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"rock_a"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [4, 5, 4, 5, 4, 5, 4, 5, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4pjog"]
_data = {
"RESET": SubResource("Animation_ka1dr"),
"rock_bump_down": SubResource("Animation_aj767"),
"rock_bump_left": SubResource("Animation_edfkx"),
"rock_bump_right": SubResource("Animation_1wqbj"),
"rock_bump_up": SubResource("Animation_k23tc"),
"rock_idle1": SubResource("Animation_4l3ec"),
"rock_idle2": SubResource("Animation_123vg"),
"rock_sleep": SubResource("Animation_fgn7o"),
"rock_talk1": SubResource("Animation_gihk5"),
"rock_talk2": SubResource("Animation_47amo"),
"rock_talk3": SubResource("Animation_bqalg"),
"rock_talk4": SubResource("Animation_dje3f"),
"rock_zapdeath": SubResource("Animation_ph36y")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_2wcoi"]
atlas = ExtResource("15_rdfwx")
region = Rect2(0, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7jb6"]
atlas = ExtResource("15_rdfwx")
region = Rect2(50, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8u3w"]
atlas = ExtResource("15_rdfwx")
region = Rect2(100, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_fqfjd"]
atlas = ExtResource("15_rdfwx")
region = Rect2(150, 0, 50, 50)

[sub_resource type="SpriteFrames" id="SpriteFrames_vdgde"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wcoi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7jb6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8u3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fqfjd")
}],
"loop": true,
"name": &"sparks",
"speed": 20.0
}]

[node name="rock" type="CharacterBody2D"]
z_index = 3
input_pickable = true
motion_mode = 1
script = ExtResource("1_kvbvv")
moves_horizontally = false
moves_vertically = false

[node name="rock_collision_shape_2d" type="CollisionShape2D" parent="."]
position = Vector2(20, 20)
scale = Vector2(1.54, 1.09)
shape = SubResource("CapsuleShape2D_hpm4g")

[node name="animated_sprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_jajcc")
animation = &"idle1"
offset = Vector2(20, 20)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../animated_sprite")
libraries = {
"": SubResource("AnimationLibrary_4pjog")
}

[node name="audio_rock_death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_n4p0j")
bus = &"SFX"

[node name="state_machine" parent="." node_paths=PackedStringArray("starting_state") instance=ExtResource("8_gkbvo")]
starting_state = NodePath("Idle")

[node name="Idle" type="Node" parent="state_machine"]
script = ExtResource("10_386bm")
is_pokeable = true
anim = "rock_idle1"

[node name="Before" type="Node" parent="state_machine"]
script = ExtResource("9_hntwq")

[node name="Ambient" type="Node" parent="state_machine"]
script = ExtResource("11_mmoj1")
animations = Array[String](["rock_sleep", "rock_idle2", "rock_talk1", "rock_talk2", "rock_talk3", "rock_talk4"])

[node name="audio_rock_idle1" type="AudioStreamPlayer2D" parent="state_machine/Ambient"]
stream = ExtResource("4_0almh")
bus = &"SFX"

[node name="audio_rock_idle2" type="AudioStreamPlayer2D" parent="state_machine/Ambient"]
stream = ExtResource("5_gjlwt")
bus = &"SFX"

[node name="audio_rock_idle3" type="AudioStreamPlayer2D" parent="state_machine/Ambient"]
stream = ExtResource("6_ld5md")
bus = &"SFX"

[node name="After" type="Node" parent="state_machine"]
script = ExtResource("12_ipb3a")
anim = "rock_idle1"

[node name="Zap" type="Node" parent="state_machine"]
script = ExtResource("13_m4bn5")
anim = "rock_zapdeath"

[node name="Dead" type="Node" parent="state_machine"]
script = ExtResource("14_4snjj")

[node name="spark_loop" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_vdgde")
animation = &"sparks"
offset = Vector2(24, 24)

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="started_turn" from="state_machine/Before" to="." method="_on_started_turn"]
[connection signal="finished_turn" from="state_machine/After" to="." method="_on_finished_turn"]
[connection signal="finished_dying" from="state_machine/Zap" to="." method="_on_finished_dying"]
[connection signal="got_zapped" from="state_machine/Zap" to="." method="_on_got_zapped"]
